TEST_PROGRAMS/INVALID/for1.go
// `for` is Go's only looping construct. Here are
// three basic types of `for` loops.

package main


func main() {

    // The most basic type, with a single condition.
    i := 1
    for i <= 3 i++ {
        println(i)
        i = i + 1
    }


}

